# AdventOfCode2025

./: .gitignore  CMakeLists.txt  README.md  justfile
.devcontainer/: Dockerfile
common/: BitsetUtils.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Grid.hpp  InputFile.cpp  InputFile.hpp  MathUtils.hpp  ResultAdapter.hpp  Runner.cpp  Runner.hpp  Search.hpp  StringUtils.hpp  TestHarness.cpp  TestHarness.hpp  Utils.cpp  Utils.hpp
cpp-day-template/: CMakeLists.txt.j2  main.cpp.j2
cpp-day-template/partials/: includes.j2  main_entry.j2  tests.j2
cpp-day-template/src/: include.hpp.j2  part01.cpp.j2  part02.cpp.j2
day-01/: CMakeLists.txt  main.cpp  puzzle.txt
day-01/src/: detail.hpp  include.hpp  part01.cpp  part02.cpp
day-02/: CMakeLists.txt  main.cpp  puzzle.txt
day-02/src/: include.hpp  part01.cpp  part02.cpp
day-03/: CMakeLists.txt  main.cpp  puzzle.txt
day-03/src/: include.hpp  part01.cpp  part02.cpp
day-04/: CMakeLists.txt  main.cpp
day-04/src/: include.hpp  part01.cpp  part02.cpp
day-05/: CMakeLists.txt  main.cpp
day-05/src/: include.hpp  part01.cpp  part02.cpp
day-06/: CMakeLists.txt  main.cpp  puzzle.txt
day-06/src/: include.hpp  part01.cpp  part02.cpp
day-07/: CMakeLists.txt  main.cpp
day-07/src/: include.hpp  part01.cpp  part02.cpp
day-08/: CMakeLists.txt  main.cpp
day-08/src/: include.hpp  (+2 more)
day-09/: CMakeLists.txt  main.cpp
day-10/: CMakeLists.txt  main.cpp  puzzle.txt
day-10/src/: include.hpp  part01.cpp  part02.cpp
day-11/: CMakeLists.txt  main.cpp  puzzle.txt
day-12/: CMakeLists.txt  main.cpp
util/: new-day.py
(+13 files in other folders)
